# approval-first-research-automation

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  adaptive_closed_loop_demo.py  agent.py  environment.yml  extract_prices.py  pyproject.toml  requirements.txt
adapters/: __init__.py  base.py  ecommerce.py
configs/: agent_template.yaml  approved_browser_template.yaml  douban.yaml  spider_template.yaml  taobao.yaml
core/: __init__.py  llm_repair.py  quality_gate.py  repair_persistence.py  self_healing.py  spider_engine.py
docs/: AI_RESEARCH_ASSISTANT.md  DEMO_RECORDING.md  EDUCATIONAL_VERSION.md  LAUNCH_KIT.md  PRODUCT_SCOPE.md  RELEASE_CHECKLIST.md  WORKFLOW_AUTHORING.md  WORKFLOW_GALLERY.md
examples/: README.md
labs/: __init__.py
research_assistant/: __init__.py  _version.py  cli.py  content_tools.py  document_tools.py  integrity.py  models.py  planner.py  plugins.py  providers.py  publisher_contracts.py  registry.py  runner.py  secrets.py  settings.py  tools.py  workflows.py  workspace.py
scripts/: package_smoke.py  publish_articles.py  render_product_preview.py  render_workflow_overview.ps1  verify.py
tests/: test_cli.py  test_document_workflows.py  test_examples.py  test_execution_integrity.py  test_llm_repair.py  test_page_evolution_lab.py  test_repository_docs.py  test_research_assistant_models.py  test_research_assistant_planner.py  test_research_assistant_providers.py  test_research_assistant_runner.py  test_research_assistant_tools.py  test_spider_engine.py
workflows/: __init__.py  content_save_draft.yaml  crawler_report.yaml  document_to_markdown.yaml  file_report.yaml  research_report.yaml  (+1 more)
(+24 files in other folders)
