[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-crawler-research-assistant"
dynamic = ["version"]
description = "Configurable web crawler with optional approval-first research workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "playwright>=1.61,<2",
  "PyYAML>=6,<7",
  "scrapling>=0.4.10,<0.5",
  "playwright-stealth>=2.0,<3",
  "google-genai>=1,<2",
  "dashscope>=1.24,<2",
  "httpx>=0.28,<1",
  "keyring>=25,<26",
  "python-docx>=1.1,<2",
  "PyMuPDF>=1.24,<2",
]

[project.scripts]
agent = "research_assistant.cli:main"

[tool.setuptools.packages.find]
include = ["research_assistant*", "core*", "adapters*", "workflows"]

[tool.setuptools.package-data]
workflows = ["*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "research_assistant._version.__version__"}
